# backend/swagger/paths/appointments.yaml
@@ -88,6 +88,31 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
       security:
         - BearerAuth: []
+  /appointments/user/{userId}/stats:
+    get:
+      tags: [Appointments]
+      summary: 사용자의 예약 통계 조회
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: 성공
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
+        400:
+          description: 예약 통계 조회 실패
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      security:
+        - BearerAuth: []
   /appointments/doctor/{doctorId}:
     get:
       tags: [Appointments]
